--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "lenis": "^1.0.35",
+    "lucide-react": "^0.552.0",
     "next": "14.2.3",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.31",
