change UI of hero

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paper-design/shaders-react": "^0.0.61",
     "autoprefixer": "^10.4.19",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
