--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.31",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "sharp": "^0.34.4",
     "swr": "^2.2.4",
     "tailwindcss": "^3.4.4"
   },
