--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "postcss": "^8.4.31",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.66.0",
+    "react-hot-toast": "^2.6.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-select": "^5.10.2",
     "sharp": "^0.34.4",
     "swr": "^2.2.4",
     "tailwindcss": "^3.4.4"
