--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "generate-sitemap": "node scripts/generate-sitemap.js",
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run generate-sitemap && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -32,6 +33,8 @@
     "@types/react": "19.2.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
+    "glob": "^13.0.0",
     "typescript": "^5.6.3"
-  }
+  },
+  "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
